tests/error/pointer_unknown_arg.gw
#! [contains] unknown type
funcdef void my_func(unknown_type type);
